# hackerrank

./: .gitignore  Cargo.toml  readme.md
rust/: Cargo.toml
rust/src/: main.rs
rust/tests/: run_samples.rs
rust/tests/samples/bomber-man-testcases/output/: output15.txt
rust/tests/samples/grid-challenge-testcases/input/: input00.txt
rust/tests/samples/kangaroo-testcases/input/: input_custom.txt
rust/tests/samples/misere-nim-1-testcases/input/: input01.txt
rust/tests/samples/misere-nim-1-testcases/output/: output01.txt
rust/tests/samples/nimble-game-1-testcases/input/: input01.txt  input03.txt
rust/tests/samples/prime-date-testcases/output/: output01.txt
rust/tests/samples/strings-xor-testcases/input/: input09.txt
rust/tests/samples/strong-password-testcases/input/: input01.txt
rust/tests/samples/time-conversion-testcases/input/: input01.txt  input02.txt  input03.txt
rust/tests/samples/time-conversion-testcases/output/: output02.txt
src/: readme.md
tests/: run_samples.rs
tests/samples/bomber-man-testcases/input/: input15.txt
tests/samples/camel-case-testcases/input/: input00.txt
tests/samples/camel-case-testcases/output/: output00.txt
tests/samples/closest-numbers-testcases/input/: input05.txt
tests/samples/grid-challenge-testcases/input/: input12.txt
tests/samples/min-max-testcases/input/: input02.txt
tests/samples/nimble-game-1-testcases/input/: input00.txt
tests/samples/nimble-game-1-testcases/output/: output03.txt
tests/samples/prime-date-testcases/input/: input01.txt
tests/samples/smart-number-testcases/input/: input09.txt
(+6 files in other folders)
