[package]
name = "hackerrank"
version = "0.1.0"
edition = "2021"
default-run = "hackerrank"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"
itertools = "0.10.5"
pretty_assertions = "1.3.0"
